src/test/resources/refCompilerOutput/invalid/syntaxErr/function/noBodyAfterFuncs.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 15:0 -- extraneous input 'end' expecting {'pair', 'fst', 'snd', 'int', 'bool', 'char', 'string', 'if', 'skip', 'while', 'print', 'println', 'begin', 'return', 'exit', 'free', 'read', ID}
1 parser error(s) detected, no further compilation attempted.
